# spirit_space

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  EPICS.md  PROJECT_SUMMARY.md  REQUIREMENTS.md  SPRINTS.md  TECH_STACK.md  vcpkg.json
.claude/: settings.json
.claude/hooks/: check-phase.sh  format-cpp.sh
.github/workflows/: ci.yml
config/: game.json  ships.json
src/: main.cpp
tests/: test_smoke.cpp
